<resources>
    <string name="app_name">OnlineWeddingHallBooking</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="register">REGISTER</string>
    <string name="name_text">Name</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="re_password_text">Re-enter Password</string>
    <string name="gender_text">Gender:</string>
    <string name="phone_no_text">Phone No.</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="register_as">Register As: </string>
    <string name="customer_text">Customer</string>
    <string name="service_provider_text">Service Provider</string>
    <string name="submit_text">Submit</string>

    <string-array name="gender_names">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="register_as_array">
        <item>Customer</item>
        <item>Service Provider</item>
    </string-array>

    <string-array name="months">

        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>

    </string-array>

    <string-array name="venue_types">

        <item>Banquet</item>
        <item>Hall</item>
        <item>Lawn</item>
        <item>Marquee</item>
        <item>Other</item>

    </string-array>


    <string-array name="partition_available_options">

        <item>Yes</item>
        <item>No</item>

    </string-array>

    <string-array name="menu_types">

        <item>Drinks</item>
        <item>Starters</item>
        <item>Main Course</item>
        <item>Dessert</item>

    </string-array>

    <string-array name="internal_catering_options">

        <item>Available</item>
        <item>Not Available</item>

    </string-array>

    <string-array name="time_slots">

        <item>Noon (2:00 PM)</item>
        <item>After Noon (5:00 PM)</item>
        <item>Night (8:00 PM)</item>

    </string-array>

    <string-array name="yes_no">

        <item>Yes</item>
        <item>No</item>

    </string-array>


    <string name="verification_text">VERIFICATION</string>
    <string name="verify_text">Verify</string>
    <string name="cnic_text">CNIC (Without Spaces)</string>
    <string name="address_text">Address</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="birth_year">Birth Year</string>
    <string name="login">LOGIN</string>
    <string name="login_button_text">Login</string>
    <string name="signup">Or Signup</string>
    <string name="reset_password">RESET PASSWORD</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="filter">Filter</string>
    <string name="profile">Profile</string>
    <string name="save">SAVE</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

</resources>